--- a/Class_1/d_native_datatypes.ipynb
+++ b/Class_1/d_native_datatypes.ipynb
@@ -492,7 +492,7 @@
     }
    ],
    "source": [
-    "a_list = ['a', 'b', 'mpilgrim', 'z', 'example'] \n",
+    "a_list = ['a', 'b', 'Python', 'z', 'example'] \n",
     "print(a_list)\n",
     "print(a_list)"
    ]
@@ -651,10 +651,273 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Append Vs Extend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial List : ['a', 'b', 'c']\n",
+      "Length :  3\n",
+      "\n",
+      "After applying extend : ['a', 'b', 'c', 'd', 'e', 'f']\n",
+      "Length after extending :  6\n",
+      "\n",
+      "After applying append : ['a', 'b', 'c', 'd', 'e', 'f', ['g', 'h', 'i']]\n",
+      "Length after appending :  7\n",
+      "\n",
+      "First element of the list : a\n",
+      "Last element of the list : ['g', 'h', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a','b','c']\n",
+    "print(\"Initial List :\",a_list)\n",
+    "print(\"Length : \",len(a_list))\n",
+    "\n",
+    "a_list.extend(['d','e','f'])\n",
+    "print(\"\\nAfter applying extend :\",a_list)\n",
+    "print(\"Length after extending : \",len(a_list))\n",
+    "\n",
+    "a_list.append(['g','h','i'])\n",
+    "print(\"\\nAfter applying append :\",a_list)\n",
+    "print(\"Length after appending : \",len(a_list))\n",
+    "\n",
+    "print(\"\\nFirst element of the list :\",a_list[0])\n",
+    "print(\"Last element of the list :\",a_list[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of 'c' in th list: 3\n",
+      "Checking if 'c' is present in the list: True\n",
+      "Checking if 'g' is present in the list: False\n",
+      "Printing Index of 'c' in the list: 2\n",
+      "Element not found in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a', 'b', 'c', 'd', 'c', 'f','a', 'b', 'c']\n",
+    "print(\"Count of 'c' in th list:\",a_list.count('c'))  # 'in' - is faster than count to check the presence of an element in list\n",
+    "print(\"Checking if 'c' is present in the list:\",'c'in a_list) # returns in bool datatype\n",
+    "print(\"Checking if 'g' is present in the list:\",'g' in a_list) # returns in bool datatype\n",
+    "print(\"Printing Index of 'c' in the list:\",a_list.index('c')) # returns the first index only\n",
+    "try:\n",
+    "    print(\"Printing Index of 'g' in the list:\",a_list.index('g')) # returns the first index only\n",
+    "except ValueError:\n",
+    "    print(\"Element not found in the list\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removing elements\n",
+    "1. Delete\n",
+    "2. Remove\n",
+    "3. Pop\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_list: ['a', 'b', 'c', 'd', 'e']\n",
+      "a_list[1]: b\n",
+      "a_list: ['a', 'c', 'd', 'e']\n",
+      "\n",
+      "a_list[1]: c\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a', 'b', 'c', 'd', 'e']\n",
+    "print(\"a_list:\", a_list)\n",
+    "print(\"a_list[1]:\", a_list[1])\n",
+    "del a_list[1]                     # Deletes the element in index 1,after deleting index 1 does not result in an error- next element occupies its space\n",
+    "print(\"a_list:\", a_list)          # the gap is filled by next element\n",
+    "print(\"a_list[1]:\", a_list[1])   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.Remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_list: ['b', 'c', 'a', 'e']\n",
+      "a_list: ['b', 'c', 'e']\n",
+      "the given Value is not present in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a', 'b', 'c', 'a', 'e']\n",
+    "a_list.remove('a')  # removes First occurance of 'a'\n",
+    "print(\"a_list:\", a_list)\n",
+    "a_list.remove('a')  # removes First occurance of 'a' again\n",
+    "print(\"a_list:\", a_list)  # indices are adjusted . Gap filling happens\n",
+    "try:\n",
+    "    a_list.remove('a')\n",
+    "except ValueError:\n",
+    "    print(\"the given Value is not present in the list\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_list: ['a', 'b', 'c', 'a', 'e']\n",
+      "Popped Item using a_list.pop(): e\n",
+      "a_list: ['a', 'b', 'c', 'a']\n",
+      "\n",
+      "Popped Item using a_list.pop(1): b\n",
+      "a_list: ['a', 'c', 'a']\n",
+      "\n",
+      "Cannot pop the element in the given index. No Value is present in the index\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a', 'b', 'c', 'a', 'e']\n",
+    "print(\"a_list:\", a_list)\n",
+    "print(\"Popped Item using a_list.pop():\", a_list.pop()) # removes the last element as no element specified in the argment and returns the value it removed.\n",
+    "print(\"a_list:\", a_list)\n",
+    "\n",
+    "print(\"\\nPopped Item using a_list.pop(1):\", a_list.pop(1)) # removes element in index 1 and fills the gap and returns the value it removed.\n",
+    "print(\"a_list:\", a_list)\n",
+    "try:    \n",
+    "    a_list.pop(4)        # no such index\n",
+    "except IndexError:\n",
+    "    print(\"\\nCannot pop the element in the given index. No Value is present in the index\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean Datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no, it's false\n",
+      "yes, it's true\n",
+      "yes, it's true\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_it_true(anything):\n",
+    "    if anything:\n",
+    "        print(\"yes, it's true\")\n",
+    "    else:\n",
+    "        print(\"no, it's false\")\n",
+    "\n",
+    "is_it_true([])  # An empty list is false\n",
+    "\n",
+    "is_it_true(['a'])  # list is not empty, value doen't matter, value exists.\n",
+    "\n",
+    "is_it_true([False])  # list is not empty, value doen't matter, value exists.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuple\n",
+    "# Immutable List\n",
+    "# It cant be changed Once it is created\n",
+    "# append, Extend, insert,remove pop - will not work here\n",
+    "# By slicing you can create a new one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'b', 'c', 'a', 'e')\n",
+      "Print a_tuple[0] a\n",
+      "a_tuple[-1] e\n",
+      "a_tuple[1:3] ('b', 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_tuple = ('a', 'b', 'c', 'a', 'e')  # Just like list but the bracket is paranthesis()\n",
+    "print(a_tuple)\n",
+    "print(\"Print a_tuple[0]:\",a_tuple[0]) # index starts with 0\n",
+    "print(\"a_tuple[-1]:\", a_tuple[-1])     # Negative indexing Works\n",
+    "print(\"a_tuple[1:3]:\",a_tuple[1:3])    # slicing also works\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -674,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
