--- a/Class_1/d_native_datatypes.ipynb
+++ b/Class_1/d_native_datatypes.ipynb
@@ -888,7 +888,14 @@
     "# Immutable List\n",
     "# It cant be changed Once it is created\n",
     "# append, Extend, insert,remove pop - will not work here\n",
-    "# By slicing you can create a new one"
+    "# By slicing you can create a new one\n",
+    "\n",
+    "So what are tuples good for?\n",
+    "\n",
+    "* Tuples are faster than lists. If you’re defining a constant set of values and all you’re ever going to do with it is iterate through it, use a tuple instead of a list.\n",
+    "* It makes your code safer if you “write-protect” data that doesn’t need to be changed. Using a tuple instead of a list is like having an implied assert statement that shows this data is constant, and that special thought (and a specific function) is required to override that.\n",
+    "* Some tuples can be used as dictionary keys (specifically, tuples that contain immutable values like strings, numbers, and other tuples). \n",
+    "* Lists can never be used as dictionary keys, because lists are not immutable."
    ]
   },
   {
@@ -918,7 +925,228 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Other operations\n",
+    "Check index\n",
+    "Check if the element is present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_tuple.index('a') 0\n",
+      "Check if'z' is in tuple: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a_tuple.index('a'):\",a_tuple.index('a'))\n",
+    "print(\"Check if'z' is in tuple:\",'z' in a_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuples in Boolean Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_it_true(anything):\n",
+    "    if anything:\n",
+    "        print(\"yes, it's true\")\n",
+    "    else:\n",
+    "        print(\"no, it's false\")\n",
+    "\n",
+    "is_it_true(())     # No elements is false in bool\n",
+    "is_it_true(('a','b'))  # Have some elements, what elements - you dont have to worry\n",
+    "is_it_true((False,))   # Have elements inside tuple? yes but what that comma - it denotes its not a single value its a tuple\n",
+    "\n",
+    "#checl the type with comma and without comma\n",
+    "print(type((False)))\n",
+    "print(type((False,)))\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assigning multiple values at once (Which is also possible in List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = (2,'a',True)\n",
+    "(a,b,x) = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "(MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY) = range(7)\n",
+    "print(MONDAY)\n",
+    "print(TUESDAY)\n",
+    "print(SUNDAY)\n",
+    "#\tThe built-in range() function constructs a sequence of integers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SETS\n",
+    "# Unordered\n",
+    "# Sets are bags of unique values. If you try to add a value that already exists in the set, it will do nothing. It won’t raise an error; it’s just a no-op."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print a_set: {1}\n",
+      "Type: <class 'set'>\n",
+      "Print a_set: {1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1}\n",
+    "print(\"Print a_set:\",a_set)\n",
+    "print(\"Type:\",type(a_set))\n",
+    "a_set = {1, 2} \n",
+    "print(\"Print a_set:\",a_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print a_set: {False, 1, 2, 'a', 'b'}\n",
+      "Type: <class 'set'>\n",
+      "\n",
+      "Print b_set: {False, 'x', 8, 9, 'y'}\n",
+      "Type: <class 'set'>\n",
+      "\n",
+      "Print new_one: {}\n",
+      "Type: <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a','b',1,2,True,False]\n",
+    "a_set = set(a_list)\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "print(\"Type:\",type(a_set))\n",
+    "\n",
+    "b_set = {'x','y',9,8,False}\n",
+    "print(\"\\nPrint b_set:\",b_set) \n",
+    "print(\"Type:\",type(b_set))\n",
+    "# The print shows that the set is unordered.\n",
+    "\n",
+    "new_one = {}  # this creates Dictionary not SET - We cant create empty set\n",
+    "print(\"\\nPrint new_one:\",new_one)\n",
+    "print(\"Type:\",type(new_one))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inserting values ->1. Add , 2. Update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print a_set: {1, 2}\n",
+      "Print a_set after including 4: {1, 2, 4}\n",
+      "length: 3\n",
+      "Print a_set: {1, 2, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1, 2}\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "a_set.add(4)\n",
+    "print(\"Print a_set after including 4:\",a_set) \n",
+    "print(\"length:\",len(a_set)) \n",
+    "a_set.add(1)\n",
+    "print(\"Print a_set:\",a_set) # no change as set already has element called 1\n",
+    "# Remember set does not allow duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print a_set: {1, 2, 3}\n",
+      "Print a_set: {1, 2, 3, 4, 6}\n",
+      "Print a_set: {1, 2, 3, 4, 5, 6, 8, 9, 13}\n",
+      "Print a_set: {1, 2, 3, 4, 5, 6, 8, 9, 10, 13, 20, 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1, 2, 3}\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "a_set.update({2, 4, 6})\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "a_set.update({3, 6, 9}, {1, 2, 3, 5, 8, 13})\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "a_set.update([10, 20, 30])\n",
+    "print(\"Print a_set:\",a_set) "
+   ]
   }
  ],
  "metadata": {
