--- a/Class_1/d_native_datatypes.ipynb
+++ b/Class_1/d_native_datatypes.ipynb
@@ -477,24 +477,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'mpilgrim', 'z', 'example']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'Python', 'z', 'example']\n",
+      "<class 'list'>\n",
+      "[]\n",
+      "<class 'list'>\n",
+      "['a', 'b', 'Python', 'z', 'example']\n",
+      "<class 'list'>\n"
+     ]
     }
    ],
    "source": [
-    "a_list = ['a', 'b', 'Python', 'z', 'example'] \n",
+    "a_list = ['a', 'b', 'Python', 'z', 'example']  # one way to create list\n",
     "print(a_list)\n",
-    "print(a_list)"
+    "print(type(a_list))\n",
+    "\n",
+    "b_list = []       # first way of creation of list with no elements\n",
+    "print(b_list)\n",
+    "print(type(b_list))\n",
+    "\n",
+    "\n",
+    "c_list = list(a_list)     # second way to create a list\n",
+    "print(c_list) # print elements\n",
+    "print(type(c_list))"
    ]
   },
   {
@@ -900,26 +911,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "first_tuple:  <class 'tuple'>\n",
+      "second_tuple:  <class 'tuple'>\n",
       "('a', 'b', 'c', 'a', 'e')\n",
-      "Print a_tuple[0] a\n",
-      "a_tuple[-1] e\n",
-      "a_tuple[1:3] ('b', 'c')\n"
+      "Print a_tuple[0]: a\n",
+      "a_tuple[-1]: e\n",
+      "a_tuple[1:3]: ('b', 'c')\n"
      ]
     }
    ],
    "source": [
+    "first_tuple =  () # first way to create an empty tuple \n",
+    "print(\"first_tuple: \",type(first_tuple) )\n",
+    "second_tuple = tuple()  # first way to create tuple - can coerce from any type\n",
+    "print(\"second_tuple: \",type(second_tuple))\n",
+    "\n",
     "a_tuple = ('a', 'b', 'c', 'a', 'e')  # Just like list but the bracket is paranthesis()\n",
     "print(a_tuple)\n",
     "print(\"Print a_tuple[0]:\",a_tuple[0]) # index starts with 0\n",
     "print(\"a_tuple[-1]:\", a_tuple[-1])     # Negative indexing Works\n",
-    "print(\"a_tuple[1:3]:\",a_tuple[1:3])    # slicing also works\n"
+    "print(\"a_tuple[1:3]:\",a_tuple[1:3])    # slicing also works"
    ]
   },
   {
@@ -1025,7 +1043,8 @@
    "source": [
     "## SETS\n",
     "# Unordered\n",
-    "# Sets are bags of unique values. If you try to add a value that already exists in the set, it will do nothing. It won’t raise an error; it’s just a no-op."
+    "# Sets are bags of unique values. If you try to add a value that already exists in the set, it will do nothing. It won’t raise an error; it’s just a no-op.\n",
+    "# allows us to do set operations"
    ]
   },
   {
@@ -1053,17 +1072,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Print first_set: <class 'set'>\n",
       "Print a_set: {False, 1, 2, 'a', 'b'}\n",
       "Type: <class 'set'>\n",
       "\n",
-      "Print b_set: {False, 'x', 8, 9, 'y'}\n",
+      "Print b_set: {False, 'y', 8, 9, 'x'}\n",
       "Type: <class 'set'>\n",
       "\n",
       "Print new_one: {}\n",
@@ -1073,7 +1093,11 @@
    ],
    "source": [
     "a_list = ['a','b',1,2,True,False]\n",
-    "a_set = set(a_list)\n",
+    "\n",
+    "first_set = set() #First way to create set\n",
+    "print(\"Print first_set:\",type(first_set) )\n",
+    "\n",
+    "a_set = set(a_list)  # Second way to create set from list\n",
     "print(\"Print a_set:\",a_set) \n",
     "print(\"Type:\",type(a_set))\n",
     "\n",
@@ -1082,7 +1106,7 @@
     "print(\"Type:\",type(b_set))\n",
     "# The print shows that the set is unordered.\n",
     "\n",
-    "new_one = {}  # this creates Dictionary not SET - We cant create empty set\n",
+    "new_one = {}  # this creates Dictionary not SET - We cant create empty set this way\n",
     "print(\"\\nPrint new_one:\",new_one)\n",
     "print(\"Type:\",type(new_one))\n"
    ]
@@ -1123,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1131,9 +1155,9 @@
      "output_type": "stream",
      "text": [
       "Print a_set: {1, 2, 3}\n",
-      "Print a_set: {1, 2, 3, 4, 6}\n",
-      "Print a_set: {1, 2, 3, 4, 5, 6, 8, 9, 13}\n",
-      "Print a_set: {1, 2, 3, 4, 5, 6, 8, 9, 10, 13, 20, 30}\n"
+      "Print a_set.update({2, 4, 6}:     {1, 2, 3, 4, 6}\n",
+      "Print a_set.update({3, 6, 9}, {1, 2, 3, 5, 8, 13}):     {1, 2, 3, 4, 5, 6, 8, 9, 13}\n",
+      "Print a_set.update([10, 20, 30]):     {1, 2, 3, 4, 5, 6, 8, 9, 10, 13, 20, 30}\n"
      ]
     }
    ],
@@ -1141,12 +1165,300 @@
     "a_set = {1, 2, 3}\n",
     "print(\"Print a_set:\",a_set) \n",
     "a_set.update({2, 4, 6})\n",
-    "print(\"Print a_set:\",a_set) \n",
+    "print(\"Print a_set.update({2, 4, 6}: \",a_set) \n",
     "a_set.update({3, 6, 9}, {1, 2, 3, 5, 8, 13})\n",
-    "print(\"Print a_set:\",a_set) \n",
+    "print(\"Print a_set.update({3, 6, 9}, {1, 2, 3, 5, 8, 13}): \",a_set) \n",
     "a_set.update([10, 20, 30])\n",
-    "print(\"Print a_set:\",a_set) "
+    "print(\"Print a_set.update([10, 20, 30]): \",a_set) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove Items 1.discard 2. Remove 3. pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print a_set: {1, 3, 36, 6, 10, 45, 15, 21, 28}\n",
+      "Print a_set after removing 10: {1, 3, 36, 6, 45, 15, 21, 28}\n",
+      "Print a_set: {1, 3, 36, 6, 45, 15, 21, 28}\n",
+      "Print a_set: {1, 3, 36, 6, 45, 15, 28}\n",
+      "Print a_set: {1, 3, 36, 6, 45, 15, 28}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1, 3, 6, 10, 15, 21, 28, 36, 45}\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "\n",
+    "a_set.discard(10)\n",
+    "print(\"Print a_set after removing 10:\",a_set) \n",
+    "\n",
+    "a_set.discard(10)\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "# If you call the discard() method with a value that doesn’t exist in the set, \n",
+    "# it does nothing. No error; it’s just a no-op.\n",
+    "a_set.remove(21)\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "\n",
+    "a_set.remove(21)\n",
+    "print(\"Print a_set:\",a_set) \n",
+    "#Here’s the difference: if the value doesn’t exist in the set, \n",
+    "# the remove() method raises a KeyError exception."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_set.pop():  3\n",
+      "a_set.pop():  36\n",
+      "a_set.pop():  6\n",
+      "a_set.clear():  None\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1, 3, 6, 10, 15, 21, 28, 36, 45}\n",
+    "a_set.pop()\n",
+    "print(\"a_set.pop(): \", a_set.pop())\n",
+    "print(\"a_set.pop(): \", a_set.pop())\n",
+    "print(\"a_set.pop(): \", a_set.pop())\n",
+    "print(\"a_set.clear(): \", a_set.clear())\n",
+    "a_set.clear()\n",
+    "#print(\"a_set.pop(): \", a_set.pop())\n",
+    "# No Elements to print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "{1, 2, 195, 4, 5, 3, 6, 8, 9, 12, 76, 15, 17, 18, 21, 30, 51, 127}\n",
+      "{2, 5, 9, 12, 21}\n",
+      "{195, 4, 76, 51, 30, 127}\n",
+      "{1, 3, 195, 6, 4, 8, 76, 15, 17, 18, 51, 30, 127}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {2, 4, 5, 9, 12, 21, 30, 51, 76, 127, 195}\n",
+    "\n",
+    "print(30 in a_set) \n",
+    "# To test whether a value is a member of a set, \n",
+    "# use the in operator. This works the same as lists.\n",
+    "\n",
+    "print(31 in a_set)\n",
+    "\n",
+    "b_set = {1, 2, 3, 5, 6, 8, 9, 12, 15, 17, 18, 21}\n",
+    "print(a_set.union(b_set)) \n",
+    "#The union() method returns a new set containing all \n",
+    "# the elements that are in either set.\n",
+    "\n",
+    "print(a_set.intersection(b_set))\n",
+    "#The intersection() method returns a new \n",
+    "# set containing all the elements that are in both sets.\n",
+    "\n",
+    "print(a_set.difference(b_set))\n",
+    "#The difference() method returns a new set containing \n",
+    "# all the elements that are in a_set but not b_set.\n",
+    "\n",
+    "print(a_set.symmetric_difference(b_set))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "None\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_set = {1, 2, 3}\n",
+    "b_set = {1, 2, 3, 4}\n",
+    "print(a_set.issubset(b_set))\n",
+    "print(b_set.issuperset(a_set))\n",
+    "print(a_set.add(5))\n",
+    "print(a_set.issubset(b_set))\n",
+    "print(b_set.issuperset(a_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# see how bool works with sets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no, it's false\n",
+      "None\n",
+      "yes, it's true\n",
+      "None\n",
+      "yes, it's true\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_it_true(anything):\n",
+    "    if anything:\n",
+    "        print(\"yes, it's true\")\n",
+    "    else:\n",
+    "        print(\"no, it's false\")\n",
+    "\n",
+    "print(is_it_true(set()))\n",
+    "print(is_it_true({'a'}))\n",
+    "print(is_it_true({False}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary\n",
+    "-Python 3.7 dictionaries are Ordered which can retain the order or insertion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'server': 'db.diveintopython3.org', 'database': 'mysql'}\n",
+      "db.diveintopython3.org\n",
+      "mysql\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create dictionary with two items\n",
+    "a_dict = {}\n",
+    "print(type(a_dict))\n",
+    "a_dict = {'server': 'db.diveintopython3.org', 'database': 'mysql'}\n",
+    "print(a_dict)\n",
+    "#'server' is a key, and its associated value, referenced by a_dict['server'], \n",
+    "# is 'db.diveintopython3.org'.\n",
+    "print(a_dict['server'])\n",
+    "#'database' is a key, and its associated value, referenced by a_dict['database'], \n",
+    "# is 'mysql'.\n",
+    "print(a_dict['database'])\n",
+    "#a_dict['db.diveintopython3.org'] # uncomment this line and test\n",
+    "#You can get values by key, but you can’t get keys by value. So a_dict['server'] is 'db.diveintopython3.org', but a_dict['db.diveintopython3.org'] raises an exception, because 'db.diveintopython3.org' is not a key."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'server': 'db.diveintopython3.org', 'database': 'blog'}\n",
+      "{'server': 'db.diveintopython3.org', 'database': 'blog', 'user': 'mark'}\n",
+      "{'server': 'db.diveintopython3.org', 'database': 'blog', 'user': 'dora'}\n",
+      "{'server': 'db.diveintopython3.org', 'database': 'blog', 'user': 'dora', 'User': 'mark'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_dict = {'server': 'db.diveintopython3.org', 'database': 'mysql'}\n",
+    "a_dict['database'] = 'blog' \n",
+    "# You can not have duplicate keys in a dictionary. \n",
+    "#Assigning a value to an existing key will wipe out the old value.\n",
+    "print(a_dict)\n",
+    "a_dict['user'] = 'mark'\n",
+    "# New key pair can be added any time. its termed as modification\n",
+    "print(a_dict)\n",
+    "\n",
+    "a_dict['user'] = 'dora'\n",
+    "#Replaces old value with new one\n",
+    "print(a_dict)\n",
+    "\n",
+    "a_dict['User'] = 'mark'\n",
+    "# case sensitive key\n",
+    "print(a_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1000: ['KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB'], 1024: ['KiB', 'MiB', 'GiB', 'TiB', 'PiB', 'EiB', 'ZiB', 'YiB']}\n",
+      "2\n",
+      "True\n",
+      "['KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB']\n",
+      "TB\n"
+     ]
+    }
+   ],
+   "source": [
+    "SUFFIXES = {1000: ['KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB'],\n",
+    "            1024: ['KiB', 'MiB', 'GiB', 'TiB', 'PiB', 'EiB', 'ZiB', 'YiB']}\n",
+    "print(SUFFIXES)\n",
+    "print(len(SUFFIXES)) # len gives number of keys in dictionary\n",
+    "print(1000 in SUFFIXES)\n",
+    "print(SUFFIXES[1000])\n",
+    "print(SUFFIXES[1000][3]) # access values using zero based index if the value has more than one item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
