--- a/Class_1/d_native_datatypes.ipynb
+++ b/Class_1/d_native_datatypes.ipynb
@@ -1361,13 +1361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'dict'>\n",
       "<class 'dict'>\n",
       "{'server': 'db.diveintopython3.org', 'database': 'mysql'}\n",
       "db.diveintopython3.org\n",
@@ -1377,8 +1378,10 @@
    ],
    "source": [
     "# create dictionary with two items\n",
-    "a_dict = {}\n",
-    "print(type(a_dict))\n",
+    "aa_dict = {}\n",
+    "print(type(aa_dict))\n",
+    "b_dict = dict()\n",
+    "print(type(b_dict))\n",
     "a_dict = {'server': 'db.diveintopython3.org', 'database': 'mysql'}\n",
     "print(a_dict)\n",
     "#'server' is a key, and its associated value, referenced by a_dict['server'], \n",
@@ -1454,11 +1457,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Boolean data type in Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no, it's false\n",
+      "yes, it's true\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_it_true(anything):\n",
+    "  if anything:\n",
+    "    print(\"yes, it's true\")\n",
+    "  else:\n",
+    "    print(\"no, it's false\")\n",
+    "\n",
+    "is_it_true({}) # Empty dict is always false\n",
+    "is_it_true({'a': 1}) # any value in dic, returns true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## None - Special Type\n",
+    "* None is a special constant in Python. It is a null value. \n",
+    "* None is not the same as False. None is not 0. \n",
+    "* None is not an empty string. \n",
+    "* Comparing None to anything other than None will always return False.\n",
+    "* None is the only null value. \n",
+    "* It has its own datatype (NoneType). \n",
+    "* You can assign None to any variable, but you can not create other NoneType objects. \n",
+    "* All variables whose value is None are equal to each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(None))\n",
+    "print(None == False)\n",
+    "print(None == 0)\n",
+    "print(None == '')\n",
+    "print(None == None)\n",
+    "x = None # assigning None value to variable x\n",
+    "print(x == None)\n",
+    "y = None\n",
+    "print(x == y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bool with None context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no, it's false\n",
+      "yes, it's true\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_it_true(anything):\n",
+    "  if anything:\n",
+    "    print(\"yes, it's true\")\n",
+    "  else:\n",
+    "    print(\"no, it's false\")\n",
+    "\n",
+    "is_it_true(None)\n",
+    "is_it_true(not None)"
+   ]
   }
  ],
  "metadata": {
