--- a/Class_2/a_os_usage.ipynb
+++ b/Class_2/a_os_usage.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,7 @@
       "('/Users/pilgrim/diveintopython3/examples', 'humansize.py')\n",
       "/Users/pilgrim/diveintopython3/examples\n",
       "humansize.py\n",
+      "('humansize', '.py')\n",
       "humansize\n",
       ".py\n"
      ]
@@ -85,16 +86,14 @@
    ],
    "source": [
     "pathname = '/Users/pilgrim/diveintopython3/examples/humansize.py'\n",
-    "print(os.path.split(pathname)) # splits pathname into tw - directory and file\n",
+    "print(os.path.split(pathname)) # split- function splits the pathname and returns - directory and file - in a tuple \n",
     "\n",
     "(dirname, filename) = os.path.split(pathname) # multi variable assignment\n",
     "print(dirname)\n",
-    "\n",
     "print(filename)\n",
-    "\n",
-    "(shortname, extension) = os.path.splitext(filename)\n",
+    "print(os.path.splitext(filename))  # splitext - split extension funtion splits filemane and extension in a tuple\n",
+    "(shortname, extension) = os.path.splitext(filename) \n",
     "print(shortname)\n",
-    "\n",
     "print(extension)\n"
    ]
   }
