--- a/Class_3/Comprehensions.ipynb
+++ b/Class_3/Comprehensions.ipynb
@@ -26,6 +26,40 @@
     "a_list = [elem * 2 for elem in a_list] #  this time we store the value in a list called a_list\n",
     "print(a_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob\n",
+    "print(glob.glob('*.py'))\n",
+    "print([os.path.realpath(f) for f in glob.glob('*.py')])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob\n",
+    "print([f for f in glob.glob('*.py') if os.stat(f).st_size > 6000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob\n",
+    "print([(os.stat(f).st_size, os.path.realpath(f)) for f in glob.glob('*.xml')] )\n",
+    "\n",
+    "import humansize\n",
+    "print([(humansize.approximate_size(os.stat(f).st_size), f) for f in glob.glob('*.xml')])"
+   ]
   }
  ],
  "metadata": {
